--- a/registro.html
+++ b/registro.html
@@ -34,7 +34,7 @@
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
                     <div class="input-container">
-                        <input name="password" id="password" class="input" type="password" placeholder="Contraseña" required minlength="6" maxlength="12" title="Debe tener al menos 6 caracteres y como maximo 12 caracteres"
+                        <input name="password" id="password" class="input" type="password" placeholder="Contraseña" required minlength="6" maxlength="12" title="Debe tener al menos 6 caracteres y como maximo 12 caracteres">
                         <label class="input-label" for="password">Contraseña</label>
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
